gobmkida/g3/hashtable_partially_clear
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hashtable_partially_clear/src/engine/cache.c:895:55: error: use of undeclared identifier 'off_4B1710'
*( __m128 *)routines = _mm_loadh_ps( ( const double *)off_4B1710); 
                                                      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hashtable_partially_clear/src/engine/cache.c:896:59: error: use of undeclared identifier 'off_4B1718'
*( __m128 *)&routines[2] = _mm_loadh_ps( ( const double *)off_4B1718); 
                                                          ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hashtable_partially_clear/src/engine/cache.c:897:60: error: use of undeclared identifier 'off_4B1720'
*( __m128 *)&routines[4] = _mm_loadh_ps( ( const double *)&off_4B1720); 
                                                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hashtable_partially_clear/src/engine/cache.c:898:60: error: use of undeclared identifier 'off_4B1728'
*( __m128 *)&routines[6] = _mm_loadh_ps( ( const double *)&off_4B1728); 
                                                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hashtable_partially_clear/src/obj/1/cache.o] Error 1
